--- a/app/globals.css
+++ b/app/globals.css
@@ -1,67 +1,110 @@
-.plan{
+.plan {
   border: 1px solid #787878;
   border-radius: 5px;
-  margin: 10px;
+  margin: 20px 10px;
 }
-.display-flex{
+.plan .name {
+  color: rgb(3, 215, 215);
+}
+.plan a {
+  color: rgb(3, 215, 215);
+  text-decoration: none;
+}
+.tags {
+  position: relative;
+  top: -13px;
+  left: 20px;
+  width: auto;
   display: flex;
+}
+.tag {
+  background: rgb(232, 232, 232);
+  padding: 3px;
+}
+.lh2 {
+  line-height: 2;
+}
+.dir-col {
+  flex-direction: column;
+}
+.mb10 {
+  margin-bottom: 10px;
+}
+.display-flex {
+  display: flex;
+  flex-wrap: wrap;
   padding: 10px;
-  
 }
-.features{
+.less-then {
+  background-color: #dedede;
+  padding: 10px;
+  border-radius: 5px;
+}
+.standard-terif {
+  background-color: rgb(194, 244, 244);
+  padding: 2px;
+  width: 200px;
+}
+.features {
   padding: 10px;
 }
-.align-center{
-align-items: center;
+.align-center {
+  align-items: center;
 }
-.space-arround{
+.space-arround {
   justify-content: space-around;
 }
-.plan-footer{
+.plan-footer {
   border-top: 1px solid;
   padding: 5px;
   background-color: #cecece;
   color: black;
   display: flex;
 }
-.terms_condition{
-  flex:7
+.terms_condition {
+  flex: 7;
 }
-.actions{
+.actions {
   display: flex;
   padding: 10px;
   justify-content: flex-end;
   align-items: center;
   flex: 2;
 }
-.btn{
- background-color: rgb(63, 63, 147);
- padding: 10px;
- color: white;
- border: 0;
- border-radius: 5px;
- cursor: pointer;
+.btn {
+  background-color: rgb(63, 63, 147);
+  padding: 10px;
+  color: white;
+  border: 0;
+  border-radius: 5px;
+  cursor: pointer;
 }
-.price-box{
+.price-box {
   border: 1px solid #787878;
   border-radius: 5px;
-  width: 180px;
+  width: 210px;
 }
-.price-bx-header{
+.price-bx-header {
   background: rgb(63, 63, 147);
   color: white;
   padding: 10px;
 }
-.price-bx-body{
+.price-bx-body {
   padding: 10px;
-  background: rgb(140, 202, 221);;
+  background: rgb(140, 202, 221);
 }
-.year-price{
+.year-price {
   font-weight: bold;
   color: #00559f;
   font-size: 18px;
 }
-.month-price{
+.month-price {
   font-size: 12px;
   color: #b9960a;
+}
+ul {
+  padding-left: 15px;
+}
+.read-or-hide {
+  color: brown;
 }
