--- a/app/globals.css
+++ b/app/globals.css
@@ -6,17 +6,18 @@
 .plan .name {
   color: rgb(3, 215, 215);
 }
-.provider-image {
-  width: 100%;
-  height: 100%;
-  position: relative;
+.col {
+  flex: 1;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 .plan a {
   color: rgb(3, 215, 215);
   text-decoration: none;
 }
 .width-220 {
-  width: 220px;
+  min-width: 220px;
 }
 .tags {
   position: relative;
@@ -32,15 +33,21 @@
 .lh2 {
   line-height: 2;
 }
+.provider-image {
+  width: 100%;
+  height: 80px;
+}
 .dir-col {
   flex-direction: column;
 }
 .mb10 {
   margin-bottom: 10px;
 }
+.wrap {
+  flex-wrap: wrap;
+}
 .display-flex {
   display: flex;
-  flex-wrap: wrap;
   padding: 10px;
 }
 .less-then {
@@ -64,7 +71,7 @@
 .plan-footer {
   border-top: 1px solid;
   padding: 10px;
-  background-color: #cecece;
+  background-color: #dedede;
   color: black;
   display: flex;
 }
@@ -86,10 +93,11 @@
   border-radius: 5px;
   cursor: pointer;
 }
+/* price box */
 .price-box {
   border: 1px solid #787878;
   border-radius: 5px;
-  width: 210px;
+  width: 250px;
 }
 .price-bx-header {
   background: rgb(63, 63, 147);
@@ -109,12 +117,20 @@
   font-size: 12px;
   color: #b9960a;
 }
-ul {
-  padding-left: 15px;
-}
+/* price box end */
+
 .read-or-hide {
   color: brown;
 }
 .list-box {
   margin: 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.check-item {
+  margin-right: 5px;
+}
+.terms_condition .list-box {
+  justify-content: flex-start !important;
 }
